[gd_scene load_steps=4 format=3 uid="uid://cmmk31d282i46"]

[ext_resource type="Script" path="res://scenes/ui/credits/GodotCredits.gd" id="1"]
[ext_resource type="FontFile" uid="uid://boix1hm1wtya1" path="res://assets/themes/SansPosterBold.ttf" id="2_2w42n"]
[ext_resource type="AudioStream" uid="uid://bqmsuqmjrspe4" path="res://assets/audio/HTDJLoop [2024-04-12 132308].wav" id="3_mgo73"]

[node name="Credits" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
script = ExtResource("1")
title_font = ExtResource("2_2w42n")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="VideoPlayer" type="VideoStreamPlayer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
expand = true

[node name="CreditsContainer" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Line" type="Label" parent="CreditsContainer"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -23.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 3
horizontal_alignment = 1

[node name="ipod" type="Node" parent="."]

[node name="HTDJ_loop" type="AudioStreamPlayer" parent="ipod"]
stream = ExtResource("3_mgo73")
volume_db = -62.986
bus = &"Bkg Music"
